--- a/src/components/Castle/Brick/Brick.module.css
+++ b/src/components/Castle/Brick/Brick.module.css
@@ -1,3 +1,11 @@
 .add{
-    
+    height: 100px;
+    width: 100px;
+}
+.typeBrick{
+    height: 100px;
+    width: 100px;
+    background-image: url("./pictures/stoneBrick0.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
