--- a/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.module.css
+++ b/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.module.css
@@ -1,47 +1,48 @@
 .NavigationItem{
-    margin: 0;
     box-sizing: border-box;
     display: flex;
     height: 100%;
     align-items:center;
-
+    z-index: 90;
+    width: 100%;
 }
 .NavigationItem a{
-    color: #fff;
     text-decoration: none;
-    height: 100%;
-    padding: 16px 10px;
+    height: 75%;
     border-bottom:border-box;
     display: flex;
+    padding: 20px 0px 0px 20px;
+    font-size:25px;
+    color: black;
+    width: 100%;
 }
 .NavigationItem a:hover,
 .NavigationItem a:active,
 .NavigationItem a.active{
-    background-color: #8f5c2c;
-    border-bottom: 4px solid #40a4c8;
-    color: #fff;
+    background-color: #fff;
+    border-bottom: 10px solid #40a4c8;
+    color: black;
 }
-@media (min-width:500px){
+@media (min-width:800px){
     .NavigationItem{
         margin: 10px 0;
         height: 100%;
         display: block;
         width: auto;
         align-items:center;
+        color: black;
 
     }
     .NavigationItem a{
-        color: #8f5c2c;
         text-decoration: none;
-        width: 100%;
-        padding: 16px 10px;
         border-bottom:border-box;
         display: block;
+        color: #fff;
     }
     .NavigationItem a:hover,
     .NavigationItem a:active,
     .NavigationItem a.active{
-        color: blue;
+        color: black;
     }
 
 }
