--- a/src/components/Navigation/SideDrawer/SideDrawer.module.css
+++ b/src/components/Navigation/SideDrawer/SideDrawer.module.css
@@ -1,20 +1,20 @@
 .SideDrawer{
     position: fixed;
-    width: 200px;
+    width: 230px;
     max-width: 70%;
     height: 100%;
     left: 0;
     top:0;
-    z-index:0;
+    z-index:500;
     background-color: #fff;
     padding: 32px 16px;
     box-sizing: border-box;
     transition: transform 0.3s ease-out;
 }
-@media( min-width:500px){
-        .sideDrawer{
-            display: none;
-        }
+@media( min-width:800px){
+    .SideDrawer{
+        display: none;
+    }
 }
 .Opem{
     transform: translateX(0);
