--- a/src/components/Castle/Castle.module.css
+++ b/src/components/Castle/Castle.module.css
@@ -1,5 +1,5 @@
 .styleBuilder{
-    height:100%;
+    max-height:500px;
 
 }
 @media( max-width:800px){
@@ -7,5 +7,6 @@
         overflow: scroll;
         height:500px;
         width: 100%;
+        max-height: 300px;
     }
 }
