--- a/src/containers/Builder/Builder.module.css
+++ b/src/containers/Builder/Builder.module.css
@@ -10,7 +10,7 @@
     border-bottom: 2px solid #000;
     border-top: 2px solid #000;
     text-align: center;
-    padding: 30px;
+    padding: 30px 0 30px 0;
 }
 Button{
     opacity: 1;
@@ -53,7 +53,7 @@ Button:hover{
 @media( max-width:800px){
     .trapeze{
         width: 160px;
-        bottom:0;
+        bottom:5px;
         left:0;
         position: fixed;
         padding: 30px;
@@ -64,7 +64,7 @@ Button:hover{
         margin-left: 10px;
     }
     .ButtonDiv{
-        height: 120px;
+        height: 130px;
         padding: 0px;
         margin: 0px;
     }
@@ -73,8 +73,14 @@ Button:hover{
         bottom:0;
         right:0;
         position: fixed;
-        margin-bottom: 50px;
+        margin-bottom: 55px;
         margin-right: 10px;
+        z-index: 5;
+    }
+    .copy{
+        bottom:0;
+        right:15px;
+        position: fixed;
         z-index: 5;
     }
 }
