cleaning files and add Abaut

--- a/src/containers/Projects/Project/Brick/Brick.module.css
+++ b/src/containers/Projects/Project/Brick/Brick.module.css
@@ -9,7 +9,7 @@
 }
 
 .typeBrick{
-    background-image: url("./pictures/stoneBrick0.jpg");
+    background-image: url("../../../../components/Castle/Brick/pictures/stoneBrick0.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 }
